javax.swing.colorchooser needs to be opened