@@ -29,6 +29,7 @@ task packageMacApp(type: Exec) {
                --add-opens=java.desktop/javax.swing=ALL-UNNAMED
                --add-opens=java.desktop/javax.swing.border=ALL-UNNAMED 
                --add-opens=java.desktop/com.apple.laf=ALL-UNNAMED
+               --add-opens=java.desktop/javax.swing.colorchooser=ALL-UNNAMED
                -XX:ErrorFile=\$USER_HOME/java_error_in_idea_%p.log
                -XX:HeapDumpPath=\$USER_HOME/java_error_in_idea.hprof""",
             '--name', appName,
